[tool.poetry]
name = "repl-html-charmorph"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_html_charmorph"}]

[tool.poetry.dependencies]
python = "^3.10"
docutils = "^0.21.2"
requests = "^2.32.3"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
